--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <h2>Demos</h2>
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="./clients/howtoo/html/volt.html">HowToo Volt html markup</a>
+            <a href="./clients/howtoo/html/volt/v1/volt.html">HowToo Volt html markup [v.1]</a>
+        </li>
+        <li class="list-group-item">
+            <a href="./clients/howtoo/html/volt/v2/volt.html">HowToo Volt html markup [v.2]</a>
         </li>
     </ul>
 </div>
